practice/06_var/syntax.txt
program:
program: stmt program
stmt: assign ";"
assign: add
assign: add "=" assign
add: mul
add: add "+" mul
add: add "-" mul
mul: term
mul: mul "*" term
mul: mul "/" term
term: num
term: ident
term: "(" assign ")"


program:
program: stmt program
stmt: assign ";"
assign: add
assign: add "=" assign
add: mul addx
addx:
addx: "+" mul addx
addx: "-" mul addx
mul: term mulx
mulx:
mulx: "*" term mulx
mulx: "/" term mulx
term: num
term: ident
term: "(" assign ")"
